syntax = "proto3";

package contract;

service TokenProvider {
  rpc BookToken (BookingRequest) returns (BookingResponse);
}

message BookingRequest {
  string clientId = 1;
}

message BookingResponse {
  string token = 1;
}